Booking System Updated Address / Time

--- a/app/views/application/archive_index.html.erb
+++ b/app/views/application/archive_index.html.erb
@@ -199,8 +199,8 @@
     $('html, body').animate({scrollTop: $(".benefit").offset().top}, 1000);
   });
 
-  //Map Code
-  mapboxgl.accessToken = 'pk.eyJ1Ijoiam96enphYSIsImEiOiJjaXdubzgwbm0wMmFrMnRwMnBzaHNnczV2In0.Xyl1f3DIqdhLqrGe4-kzkg';
+  // //Map Code
+  // mapboxgl.accessToken = 'pk.eyJ1Ijoiam96enphYSIsImEiOiJjaXdubzgwbm0wMmFrMnRwMnBzaHNnczV2In0.Xyl1f3DIqdhLqrGe4-kzkg';
   var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/light-v9',
