--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -38,10 +38,10 @@
         <a href="/more-info?share_by=<%= @urlshare %>">
       <% end %>
       <% if @urlshare == nil && @urloffer == nil %>
-        <a href="/more-info">
+        <a href="/booking-address">
       <% end %>
         <div class="free_lesson_btn">
-            <p>Get Started</p>
+            <p>Book Now</p>
         </div>
       </a>
     </div>
@@ -61,10 +61,10 @@
           <a href="/more-info?share_by=<%= @urlshare %>">
         <% end %>
         <% if @urlshare == nil && @urloffer == nil %>
-          <a href="/more-info">
+          <a href="/booking-address">
         <% end %>
           <div class="hero_cta">
-            <p>Get Started</p>
+            <p>Book Now</p>
           </div>
         </a>
       </div>
