--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -1,3 +1,170 @@
 // Place all the styles related to the booking controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.booking_container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+
+  .booking_sidebar {
+    width: 30%;
+    height: 100%;
+    background-color: #1c3352;
+  }
+
+  .booking_content {
+    position: relative;
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h3 {
+      color: #ffffff;
+      font-size: 1.5em;
+      letter-spacing: 0.05em;
+      margin: 0px auto 15px auto;
+      font-weight: 600;
+    }
+
+    #booking_bg {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      height: 100%;
+      width: 100%;
+      background: url('http://www.paramountdriving.com/img/instruction.jpg') no-repeat;
+      background-size: cover;
+      z-index: 1;
+    }
+
+    .address_container {
+      width: 50%;
+      padding: 2em;
+      z-index: 2;
+      background-color: rgba(#1c3352, 0.95);
+      border-radius: 7px;
+      text-align: center;
+
+      input {
+        width: 100%;
+        height: 50px;
+        border-radius: 5px;
+        margin: 5px 0px 15px 0px;
+        // border: 1px solid #2ecc71;
+        padding: 0px 25px 0px 25px;
+        font-size: 1em;
+        color: #000000 !important;
+        background-color: #ffffff;
+        border: 0px;
+
+        &:focus {
+          outline: none;
+        }
+
+      }
+
+      button {
+        width: 60%;
+        height: 50px;
+        margin: 0px auto 0px auto;
+        background-color: #2ecc71;
+        color: white;
+        border: 0px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+        font-size: 0.8em;
+
+        &:hover {
+          background-color: #31de7a;
+
+        }
+      }
+
+    }
+
+    #map {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+
+    .date_holder {
+      z-index: 2;
+      display: flex;
+      width: 70%;
+
+      .time_picker {
+        width: 60%;
+        height: 70vh;
+        padding: 4em;
+        background-color: rgba(#1c3352, 0.95);
+        border-radius: 7px;
+        text-align: center;
+
+        h3 {
+          margin-bottom: 1.5em;
+        }
+      }
+
+      .time_details {
+        height: 65vh;
+        margin-top: 2.5vh;
+        width: 40%;
+        background-color: white;
+        border-top-right-radius: 7px;
+        border-bottom-right-radius: 7px;
+        padding: 2em 2em 2em 2em;
+
+        p {
+          font-family: 'Open Sans', sans-serif;
+          font-size: 1em;
+          margin: 8px;
+        }
+
+        input {
+          width: 100%;
+          border-top: 0px;
+          border-bottom: 1.5px solid rgb(161, 161, 161);
+          border-left: 0px;
+          border-right: 0px;
+          margin-bottom: 1.5em;
+          padding: 10px;
+          font-size: 0.9em;
+          color: rgb(94, 94, 94);
+        }
+
+        button {
+          width: 60%;
+          height: 50px;
+          margin: 15px auto 0px auto;
+          background-color: #2ecc71;
+          color: white;
+          border: 0px;
+          border-radius: 5px;
+          cursor: pointer;
+          transition: 0.3s;
+          font-size: 0.8em;
+          text-align: center;
+
+          &:hover {
+            background-color: #31de7a;
+
+          }
+        }
+
+      }
+    }
+
+    .details_holder {
+
+    }
+
+  }
+}
