Added Marker to Map, Date Form Fill on Click

--- a/app/views/booking/address.html.erb
+++ b/app/views/booking/address.html.erb
@@ -19,7 +19,7 @@
 
     <div class="address_container">
       <h3>Find your Location</h3>
-      <form action="/booking-time" method="post">
+      <form action="" method="post">
         <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
         <div id="locationField">
           <input id="autocomplete" placeholder="Enter your address"
