Booking Confirmation / Striping Pricing

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -29,17 +29,6 @@
       font-weight: 600;
     }
 
-    #booking_bg {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      height: 100%;
-      width: 100%;
-      background: url('http://www.paramountdriving.com/img/instruction.jpg') no-repeat;
-      background-size: cover;
-      z-index: 1;
-    }
-
     .address_container {
       width: 50%;
       padding: 2em;
@@ -163,8 +152,108 @@
     }
 
     .details_holder {
-
+      width: 40%;
+      padding: 2.5em;
+      z-index: 2;
+      background-color: #ffffff;
+      border-radius: 7px;
+      text-align: center;
     }
 
+    #booking_black {
+      color: #000000;
+    }
+
+    input {
+      width: 100%;
+      border-top: 0px;
+      border-bottom: 1px solid rgb(205, 205, 205);
+      border-left: 0px;
+      border-right: 0px;
+      margin-bottom: 1.5em;
+      padding: 10px;
+      font-size: 0.9em;
+      color: rgb(94, 94, 94);
+    }
+
+    button {
+      width: 60%;
+      height: 50px;
+      margin: 25px auto 0px auto;
+      background-color: #2ecc71;
+      color: white;
+      border: 0px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: 0.3s;
+      font-size: 0.8em;
+      text-align: center;
+
+      &:hover {
+        background-color: #31de7a;
+
+      }
+    }
+
+    .booking_schedule {
+      background-color: #F7F8F9;
+      border: 1px solid #f0f0f0;
+      width: 100%;
+      padding: 0em 2em 2em 2em;
+
+      hr {
+        width: 100%;
+        text-align: center;
+        margin: 0 auto;
+        color: #f0f0f0;
+      }
+
+      .confirm_left {
+        text-align: left;
+        width: 70%;
+        display: inline-block;
+        vertical-align: top;
+
+        p {
+          font-size: 0.9em;
+          color: rgb(94, 94, 94);
+          line-height: 1.6em;
+        }
+
+      }
+
+      #confirm_location {
+        font-weight: 600;
+      }
+
+      #confirm_date, #confirm_time {
+        display: inline;
+      }
+
+      #confirm_time {
+        margin-left: 20px;
+      }
+
+      .confirm_right {
+        text-align: left;
+        width: 28%;
+        display: inline-block;
+        vertical-align: top;
+      }
+    }
+
+
+
   }
+}
+
+#booking_bg {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background: url('http://www.paramountdriving.com/img/instruction.jpg') no-repeat;
+  background-size: cover;
+  z-index: 1;
 }
