--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,15 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+
+<div class="option_container">
+
+  <div class="underlay"></div>
+
+  <div class="thanks-container">
+    <img src="images/thanks.png" alt="">
+    <h2>Thank You</h2>
+    <p>Keep an eye out, we'll be in touch shortly. If you would like to organise a lesson give us a call at 1300 856 857.</p>
+    <a href="/">
+      <button>Back to Home</button>
+    </a>
+  </div>
+
+</div>
