--- a/app/views/booking/thanks.html.erb
+++ b/app/views/booking/thanks.html.erb
@@ -6,8 +6,8 @@
 
   <div class="thanks-container">
     <img src="images/thanks.png" alt="">
-    <h2>Thank You</h2>
-    <p>Keep an eye out, we'll be in touch shortly. If you would like to organise a lesson give us a call at 1300 856 857.</p>
+    <h2>Thank You for Booking</h2>
+    <p>We will confirm your booking time, lock in an instuctor and be in-touch shortly. If you have any enquires please give us a call at 1300 856 857.</p>
     <a href="/">
       <button>Back to Home</button>
     </a>
