Sidebar Content Included

--- a/app/views/booking/address.html.erb
+++ b/app/views/booking/address.html.erb
@@ -11,7 +11,25 @@
 
 <div class="booking_container">
   <div class="booking_sidebar">
-
+    <div class="booking_logo">
+      <%= image_tag("logo.png") %>
+    </div>
+    <h1>Confidently pursue your Drivers License</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa numquam doloribus voluptatem incidunt neque pariatur idhic adipisicing elit Culpa numquam doloribus voluptatem.</p>
+    <div class="booking_phone">
+      <a href="tel:+1300856857">
+        <div class="phone_cta">
+          <p>Prefer to Call? 1300 856 857</p>
+        </div>
+      </a>
+    </div>
+    <div class="reviews">
+      <p>Was amazing! Jack done a fantastic job and took be from being someone who was scared of driving to a confident driver that now has her green p's. Could not have done it without Jack's guidance and lessons. Would recommend anyone who is not overly confident or even scared of driving to contact Jack.</p>
+      <p id="person_review">Marrissa Blackburn | 5 Stars</p>
+    </div>
+    <a href="http://www.facebook.com/pg/ExcelDrive/reviews/" target="_blank">
+      <p id="more_reviews">Read More Facebook Reviews Here</p>
+    </a>
   </div>
   <div class="booking_content">
 
