--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -11,6 +11,76 @@
     width: 30%;
     height: 100%;
     background-color: #1c3352;
+    padding: 4em;
+
+    .booking_logo {
+      width: 100%;
+      text-align: center;
+
+      img {
+        width: 200px;
+      }
+
+    }
+
+    h1 {
+      font-size: 3em;
+      margin-top: 1em;
+    }
+
+    p {
+      color: white;
+    }
+
+    .phone_cta {
+      border-radius: 50px;
+      background-color: #E91A2F;
+      display: inline-block;
+      padding: 0px 40px;
+      font-size: 1em;
+      font-weight: 700;
+      margin: 0 auto;
+      transition: 0.3s;
+      border-bottom: 4px solid #cc1326;
+      border-right: 4px solid #cc1326;
+
+      &:hover {
+        background-color: #f53347;
+
+      }
+    }
+
+    .booking_phone {
+      width: 100%;
+      text-align: center;
+      margin: 2em 0em;
+    }
+
+    .reviews {
+      background-color: #375885;
+      padding: 2em;
+      font-size: 0.8em;
+      margin-top: 2em;
+
+      #person_review {
+        text-align: center;
+        margin-top: 1em;
+        font-weight: 600;
+        color: rgba(#fff, 0.7);
+      }
+
+      p {
+        padding: 0;
+        margin: 0;
+      }
+    }
+
+    #more_reviews {
+      color: rgba(#fff, 0.7);
+      font-size: 0.8em;
+      text-align: center;
+    }
+
   }
 
   .booking_content {
