--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,7 +2,7 @@
 <header>
 
   <div id="triangle_pattern">
-    <img src="/images/triangle_pattern.png" alt="">
+    <!-- <img src="/images/triangle_pattern.png" alt=""> -->
   </div>
 
   <div class="nav">
@@ -72,7 +72,7 @@
       <div class="hero_right">
 
         <!-- <img id="bg_shape_1" src="images/bg_shape_1.png" alt=""> -->
-        <img id="hero_feature" src="/images/hero_feature.png" alt="">
+        <!-- <img id="hero_feature" src="/images/hero_feature.png" alt=""> -->
 
       </div>
 
