--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -346,7 +346,7 @@
   left: 0px;
   height: 100%;
   width: 100%;
-  background: url('http://www.paramountdriving.com/img/instruction.jpg') no-repeat;
+  background: url('booking_blur.jpg') no-repeat;
   background-size: cover;
   z-index: 1;
 }
