Updated Navigation / Additonal Alterations

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -13,6 +13,19 @@
     background-color: #1c3352;
     padding: 4em;
 
+    #sidebar_p {
+      color: white;
+      padding-right: 20%;
+      margin-top: 10px;
+      padding-left: 30px;
+      border-left: 1px solid #2ecc71;
+      font-family: 'Playfair Display', serif;
+      font-style: italic;
+      font-size: 1.1em;
+      line-height: 1.5em;
+      font-weight: 400;
+    }
+
     .booking_logo {
       width: 100%;
       text-align: center;
