--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -7,7 +7,7 @@
       <%= image_tag("logo.png") %>
     </div>
     <h1>Confidently pursue your Drivers License</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa numquam doloribus voluptatem incidunt neque pariatur idhic adipisicing elit Culpa numquam doloribus voluptatem.</p>
+    <p id="sidebar_p">Excel Drive boasts some of the finest instructors in Australia for that important milestone of learning to drive.</p>
     <div class="booking_phone">
       <a href="tel:+1300856857">
         <div class="phone_cta">
